[gd_scene load_steps=9 format=3 uid="uid://c4dc0ehedq8o8"]

[ext_resource type="Texture2D" uid="uid://d3e4lyyvf3vew" path="res://icon.svg" id="1_0w0pk"]
[ext_resource type="Script" path="res://Game Objects/Entities/Cores/Core.gd" id="1_d0qq3"]
[ext_resource type="Resource" uid="uid://dkd24yb3811cw" path="res://Game Objects/Entities/Cores/Core_CoreData.tres" id="2_vcik6"]
[ext_resource type="PackedScene" uid="uid://bosptt6jek2v0" path="res://Game Objects/Hurt&Hit Boxes/Hitbox.tscn" id="3_h2fb1"]
[ext_resource type="PackedScene" uid="uid://bvv1hnpluqves" path="res://Game Objects/Hurt&Hit Boxes/Hurtbox.tscn" id="3_uutck"]

[sub_resource type="LabelSettings" id="LabelSettings_v5pdy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_npjag"]
radius = 64.4981

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03d8c"]
size = Vector2(128, 128)

[node name="Core" type="Node2D"]
script = ExtResource("1_d0qq3")
data = ExtResource("2_vcik6")

[node name="CoreUI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ColorRect" parent="CoreUI"]
offset_left = 48.0
offset_top = 16.0
offset_right = 912.0
offset_bottom = 48.0
color = Color(1, 0, 0, 1)

[node name="HealthBarText" type="Label" parent="CoreUI"]
offset_right = 116.0
offset_bottom = 31.0
text = "Heath Bar Text"
label_settings = SubResource("LabelSettings_v5pdy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(0.760784, 0, 0, 1)
z_index = -1
texture = ExtResource("1_0w0pk")

[node name="Hurtbox" parent="." instance=ExtResource("3_uutck")]
position = Vector2(-96, 24)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(96, -24)
shape = SubResource("CircleShape2D_npjag")
debug_color = Color(1, 1, 0, 0.419608)

[node name="Hitbox" parent="." instance=ExtResource("3_h2fb1")]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_03d8c")
debug_color = Color(1, 0, 0, 0.419608)
